2004-04-30  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemon-trk.c:
	    When outputing the "Z-REPORT DUMP", start it with datetime,
	    and end it with data line count..  Similar with SIGUSR1
	    processing.

	* smtpserver/subdaemons.c:
	    Deep within fdgets() a read(2) call did yield EBADFD,
	    treat that as "EOF", and let auto-recovery handle it.

	* smtpserver/smtpserver.h:
	    Shrunk memory block pre-allocated for each potential
	    client from 7 kB to about 3 kB.  In systems with 1024
	    as "ulimit -n", this shrinks process image by 4 MB...

	* smtpserver/policytest.c, smtpserver/subdaemon-trk.c:
	    Styling beauty-warts, and correcting internal
	    communications primitives to match client, and
	    server to each other...

	* smtpserver/smtpreport.c:
	    When processing the authorization file, turn on root-powers
	    to access the file, then return into trusted mode.

	* include/libsh.h, include/splay.h, lib/splay.c,
	  lib/symbol.c,libsh/interpret.c, libsh/zmsh.c,
	  router/db.c, router/libdb/hreader.c, router/libdb/incore.c,
	  scheduler/mailq.c, scheduler/msgerror.c,
	  scheduler/prototules.c, scheduler/qprint.c,
	  scheduler/readconfig.c, scheduler/scheduler.c,
	  scheduler/threads.c, transports/mailbox/mailbox.c:
	    Changed the API of  sp_scan()  function, especially
	    the API of the CALLED function f.  Now can supply
	    an opaque (to splay) parameter that is passed on to
	    item processor.   (Eliminated a bunch of static globals
	    from all over the code...)

	* transports/mailbox/mailbox.c:
	    Reworked the rwhois/rbiff related splay-code.
	    Not so sure if it is _correct_, as I don't use it anymore
	    anywhere...  It _should_ be ok, but I have done mistakes
	    before...

	* transports/smtp/smtp.c:
	    Don't burn cycles to CNAME map MAIL FROM domain..
	    That isn't absolutely necessary...  Still doing
	    RCPT TO domain CNAME mapping.

	* smtpserver/subdaemon-trk.c, smtpserver/policytest.c: